--- a/lesson-3/tasks/task-3.html
+++ b/lesson-3/tasks/task-3.html
@@ -27,7 +27,8 @@
         </script>
     </main>
     <footer>
-        <a href="/index.html">До головної сторінки</a>
+        <a href="../index.html">До головної сторінки</a>
     </footer>
 </body>
+
 </html>
