--- a/lesson-3/tasks/task-4.html
+++ b/lesson-3/tasks/task-4.html
@@ -29,7 +29,8 @@
         </script>
     </main>
     <footer>
-        <a href="/index.html">До головної сторінки</a>
+        <a href="../index.html">До головної сторінки</a>
     </footer>
 </body>
+
 </html>
