--- a/lesson-3/tasks/task-5.html
+++ b/lesson-3/tasks/task-5.html
@@ -33,7 +33,8 @@
         </script>
     </main>
     <footer>
-        <a href="/index.html">До головної сторінки</a>
+        <a href="../index.html">До головної сторінки</a>
     </footer>
 </body>
+
 </html>
