--- a/lesson-3/tasks/task-7.html
+++ b/lesson-3/tasks/task-7.html
@@ -46,7 +46,8 @@
         </script>
     </main>
     <footer>
-        <a href="/index.html">До головної сторінки</a>
+        <a href="../index.html">До головної сторінки</a>
     </footer>
 </body>
+
 </html>
